Reorganize things, make reference state clear

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -232,10 +232,10 @@
 
 @book{zienkiewicz1977finite,
   title={The finite element method},
-  author={Zienkiewicz, Olgierd Cecil and Taylor, Robert Leroy and Zienkiewicz, Olgierd Cecil and Taylor, Robert Lee},
+  author={Zienkiewicz, Olgierd Cecil and Taylor, Robert Leroy},
   volume={3},
   year={1977},
-  publisher={McGraw-hill London}
+  publisher={McGraw-Hill London}
 }
 
 @article{hager1985lower,
