--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -238,6 +238,29 @@
   publisher={McGraw-Hill London}
 }
 
+@article{zhong2000role,
+  title={Role of temperature-dependent viscosity and surface plates in spherical shell models of mantle convection},
+  author={Zhong, Shijie and Zuber, Maria T and Moresi, Louis and Gurnis, Michael},
+  journal={Journal of Geophysical Research: Solid Earth (1978--2012)},
+  volume={105},
+  number={B5},
+  pages={11063--11082},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{zhong1996free,
+  title={Free-surface formulation of mantle convection—I. Basic theory and application to plumes},
+  author={Zhong, Shijie and Gurnis, Michael and Moresi, Louis},
+  journal={Geophysical Journal International},
+  volume={127},
+  number={3},
+  pages={708--718},
+  year={1996},
+  publisher={Oxford University Press}
+}
+
+
 @article{hager1985lower,
   title={Lower mantle heterogeneity, dynamic topography and the geoid},
   author={Hager, Bradford H and Clayton, Robert W and Richards, Mark A and Comer, Robert P and Dziewonski, Adam M},
