Make look slightly more like a standard eigenvalue problem

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -356,9 +356,9 @@ p^n_i
 \end{bmatrix} 
 \end{aligned}
 \end{equation}
-Then multiplying both sides by $C^{-1}$ we get
+Then multiplying both sides by $\tau_i^{-1}C^{-1}$ we get
 \begin{equation}
-\tau_i (C^{-1}D)\mathbf{y}_i = \mathbf{y}_i
+(C^{-1}D)\mathbf{y}_i = \tau_i^{-1} \mathbf{y}_i
 \label{eq:standard_eigenvalue}
 \end{equation}
 
