--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -468,7 +468,7 @@ M & 0 \\
 \mathbf{u}^n_i \\
 p^n_i
 \end{bmatrix}
-\label{eq:generalized_eigenvalue}
+\label{eq:stabilized_generalized_eigenvalue}
 \end{equation}
 where $\tau^S_i$ indicate the eigenvalues of the stabilized system.
 This system may be rearranged:
@@ -491,7 +491,7 @@ M & 0 \\
 \mathbf{u}^n_i \\
 p^n_i
 \end{bmatrix}
-\label{eq:generalized_eigenvalue}
+\label{eq:rearranged_stabilized_generalized_eigenvalue}
 \end{equation}
 
 This is precisely the same generalized eigenvalue problem as Equation~\eqref{eq:generalized_eigenvalue},
