--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -148,7 +148,7 @@ A large number of studies have approximated free surfaces in the interior of the
 Typically a free-slip boundary condition is used above the sticky air, though an open boundary may be better \citep{hillebrand2014using}. 
 
 Finally, one can use a true free surface, where a stress-free boundary condition is applied on the boundary 
-of the domain. In this case, there can be flow in an out of the domain, so the boundary must move in time.
+of the domain. In this case, there can be flow in and out of the domain, so the boundary must move in time.
 A true free surface has mathematical elegance in that the boundary condition of the domain more closely 
 matches the boundary conditions which one is trying to model, but it typically requires a deformable 
 domain with frequent remeshing to avoid ill-conditioned cells. 
